spotbug generated files